# Engineering-Practices-ML

./: .gitignore  .nojekyll  1.entry.html  1.entry.qmd  10.git_lfs.html  10.git_lfs.qmd  11.neptune.html  11.neptune.qmd  12.dvc.qmd  13.dvc_problems.html  13.dvc_problems.qmd  14.templates.qmd  14.templtes.qmd  15.workflow_manager.html  15.workflow_manager.qmd  16.make.html  16.make.qmd  17.snakemake.html  17.snakemake.qmd  18.dvc.html  18.dvc.qmd  19.airflow.html  19.airflow.qmd  2.replication_crisis.html  2.replication_crisis.qmd  20.docs.html  20.docs.qmd  3.team_work.html  3.team_work.qmd  4.git_workflow.html  4.git_workflow.qmd  5.dependencies.html  5.dependencies.qmd  6.code_styles.qmd  6.docker.html  6.docker.qmd  7.code_styles.qmd  9.data_version.html  9.data_version.qmd  _quarto.yml  (+7 more)
.github/workflows/: .gitignore  publish.yml
images/: .gitignore
site_libs/bootstrap/: bootstrap.min.css
