[tool.poetry]
name = "epml"
version = "0.1.0"
description = "Engineering practices in machine learning"
authors = ["Kovalenko Lev <levozavr@mail.ru>"]

[tool.poetry.dependencies]
python = "3.10.5"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
plotly = "^5.10.0"
ipykernel = "^6.17.0"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
pandas = "^1.5.2"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
